--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,6 +23,14 @@
         <action
             android:id="@+id/action_menu_to_installer"
             app:destination="@id/installer" />
+        <action
+            android:id="@+id/action_menu_to_waiting_Room"
+            app:destination="@id/waiting_Room" />
     </fragment>
+    <fragment
+        android:id="@+id/waiting_Room"
+        android:name="com.example.imperium_scorpio.home.Waiting_Room"
+        android:label="fragment_waiting_room"
+        tools:layout="@layout/fragment_waiting_room" />
 
 </navigation>
