Imperium Scorpio V 0.3 -implemented multiplayer system

--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -490,7 +490,7 @@
             android:background="#673AB7"
             android:text="@{hc3.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/Hc3Img"
@@ -634,7 +634,7 @@
             android:background="#673AB7"
             android:text="@{hc4.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/Hc4Img"
@@ -778,7 +778,7 @@
             android:background="#673AB7"
             android:text="@{hc5.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/Hc5Img"
@@ -875,7 +875,7 @@
             android:background="#673AB7"
             android:text="@{hc1.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/Hc1Img"
@@ -1068,7 +1068,7 @@
             android:background="#673AB7"
             android:text="@{hc2.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/Hc2Img"
@@ -1290,7 +1290,7 @@
             android:background="#673AB7"
             android:text="@{p1.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP1Img"
@@ -1436,7 +1436,7 @@
             android:background="#673AB7"
             android:text="@{p2.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP2Img"
@@ -1583,7 +1583,7 @@
             android:background="#673AB7"
             android:text="@{p3.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP3Img"
@@ -1731,7 +1731,7 @@
             android:background="#673AB7"
             android:text="@{p4.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP4Img"
@@ -1879,7 +1879,7 @@
             android:background="#673AB7"
             android:text="@{p5.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP5Img"
@@ -2027,7 +2027,7 @@
             android:background="#673AB7"
             android:text="@{p6.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP6Img"
@@ -2174,7 +2174,7 @@
             android:background="#673AB7"
             android:text="@{p7.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP7Img"
@@ -2320,7 +2320,7 @@
             android:background="#673AB7"
             android:text="@{p8.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP8Img"
@@ -2468,7 +2468,7 @@
             android:background="#673AB7"
             android:text="@{p9.r1.toString()}"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/CP9Img"
