Imperium Scorpio V 0.3.5 -Implementation Turn System

--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -3032,7 +3032,7 @@
         android:text="WIN"
         android:textColor="?android:attr/colorPressedHighlight"
         android:textSize="96dp"
-        android:visibility="invisible"
+        android:visibility="@{enemy.winVisibility}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -3049,7 +3049,43 @@
         android:textAlignment="center"
         android:textColor="?android:attr/colorPressedHighlight"
         android:textSize="30dp"
-        android:visibility="invisible"
+        android:visibility="@{enemy.winVisibility}"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.595"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.604"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/lose"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/black"
+        android:backgroundTint="@color/material_on_background_emphasis_medium"
+        android:fontFamily="@font/laceration"
+        android:gravity="center"
+        android:text="LOSE"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="70dp"
+        android:visibility="@{enemy.loseVisibility}"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/nextlose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/laceration"
+        android:text="Tocca per continuare"
+        android:textAlignment="center"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="20dp"
+        android:visibility="@{enemy.loseVisibility}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.595"
