--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -97,12 +97,11 @@
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/collection"
+            app:layout_constraintBottom_toBottomOf="@+id/new_game"
             app:layout_constraintEnd_toEndOf="@+id/new_game"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="@+id/new_game"
-            app:layout_constraintTop_toTopOf="@+id/new_game"
-            app:layout_constraintVertical_bias="0.387" />
+            app:layout_constraintTop_toTopOf="@+id/new_game" />
 
         <TextView
             android:id="@+id/textView3"
@@ -128,6 +127,35 @@
             app:layout_constraintStart_toStartOf="@+id/shop"
             app:layout_constraintTop_toTopOf="@+id/shop" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/sf_outer_limits_distupright"
+            android:text="player:"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/new_game"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.38"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.3" />
+
+        <EditText
+            android:id="@+id/Player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:fontFamily="@font/sf_outer_limits_distupright"
+            android:minHeight="48dp"
+            android:text="@string/PlayerName"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
