--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -55,17 +55,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/shop"
-            android:layout_width="240dp"
-            android:layout_height="110dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="@+id/collection"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/collection"
-            app:layout_constraintTop_toBottomOf="@+id/collection"
-            app:srcCompat="@drawable/shop" />
-
-        <ImageView
             android:id="@+id/collection"
             android:layout_width="240dp"
             android:layout_height="110dp"
@@ -93,7 +82,7 @@
             android:id="@+id/new_game_text"
             android:layout_width="135dp"
             android:layout_height="32dp"
-            android:text="New Game"
+            android:text="@string/NewGame"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="24sp"
@@ -107,25 +96,13 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Collection"
+            android:text="@string/Rules"
             android:textColor="@color/white"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="@+id/collection"
             app:layout_constraintEnd_toEndOf="@+id/collection"
             app:layout_constraintStart_toStartOf="@+id/collection"
             app:layout_constraintTop_toTopOf="@+id/collection" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Shop"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/shop"
-            app:layout_constraintEnd_toEndOf="@+id/shop"
-            app:layout_constraintStart_toStartOf="@+id/shop"
-            app:layout_constraintTop_toTopOf="@+id/shop" />
 
         <TextView
             android:id="@+id/textView2"
