--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -3101,9 +3101,13 @@
         android:id="@+id/Turn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/collection"
+        android:fontFamily="@font/glitch_inside"
         android:text="@{turn.msg}"
+        android:textColor="@{turn.color}"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/match_background" />
 
