--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -1236,7 +1236,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p1.img}" />
+            app:imageDrawable="@{p1.img}"
+            android:rotation="@{p1.rotation}"/>
 
         <TextView
             android:id="@+id/CP1At"
@@ -1382,7 +1383,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p2.img}" />
+            app:imageDrawable="@{p2.img}"
+            android:rotation="@{p2.rotation}"/>
 
         <TextView
             android:id="@+id/CP2At"
@@ -1529,7 +1531,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p3.img}" />
+            app:imageDrawable="@{p3.img}"
+            android:rotation="@{p3.rotation}"/>
 
         <TextView
             android:id="@+id/CP3At"
@@ -1677,7 +1680,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p4.img}" />
+            app:imageDrawable="@{p4.img}"
+            android:rotation="@{p4.rotation}"/>
 
         <TextView
             android:id="@+id/CP4At"
@@ -1824,7 +1828,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p5.img}" />
+            app:imageDrawable="@{p5.img}"
+            android:rotation="@{p5.rotation}"/>
 
         <TextView
             android:id="@+id/CP5At"
@@ -1972,7 +1977,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p6.img}" />
+            app:imageDrawable="@{p6.img}"
+            android:rotation="@{p6.rotation}"/>
 
         <TextView
             android:id="@+id/CP6At"
@@ -2114,13 +2120,14 @@
             android:id="@+id/CP7Img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:imageDrawable="@{p7.img}"
+            android:rotation="@{p7.rotation}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p7.img}"/>
+            app:srcCompat="@drawable/eroe" />
 
         <TextView
             android:id="@+id/CP7At"
@@ -2266,7 +2273,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p8.img}" />
+            app:imageDrawable="@{p8.img}"
+            android:rotation="@{p8.rotation}"/>
 
         <TextView
             android:id="@+id/CP8At"
@@ -2413,7 +2421,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/eroe"
-            app:imageDrawable="@{p9.img}" />
+            app:imageDrawable="@{p9.img}"
+            android:rotation="@{p9.rotation}"
+            />
 
         <TextView
             android:id="@+id/CP9At"
